# FunMDL-group-4

./: .gitignore  README.md  pyproject.toml  table1_cifar_corruption.py  test.py
experiments/: figure10_augmentation_ops.py  figure12_per_corruption.py  figure1_augmix_visualization.py  figure3_augmentation_drift.py  figure5_bar_chart.py  figure6_cifar_p_calibration.py  figure9_fourier_sensitivity.py  table1_cifar_corruption.py  table4_ablation.py  table4_results.json
src/augmix/: augmentations.py  datasets.py  metrics.py  models.py  test.py  train.py
