[project]
name = "augmix-reproduction"
version = "0.1.0"
description = "Reproduction of AugMix: A Simple Data Processing Method to Improve Robustness and Uncertainty (ICLR 2020)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/augmix"]

[tool.ruff]
line-length = 100
